--- a/DidiAr.plist
+++ b/DidiAr.plist
@@ -11,23 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://go.com/Icon.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://go.com/Icon.png</string>
+					<string>https://raw.githubusercontent.com/zyg1982527/DidiHudNav/DidiAr.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
 					<key>url</key>
-					<string>http://go.com/Icon.png</string>
+					<string>https://my.hupu.com/248003409494076</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>https://my.hupu.com/248003409494076</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -35,11 +31,11 @@
 				<key>bundle-identifier</key>
 				<string>com.xiaojukeji.artest</string>
 				<key>bundle-version</key>
-				<string>1.0.0</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>The Title To Present To The User installing the app</string>
+				<string>DidiAr</string>
 			</dict>
 		</dict>
 	</array>
